# sentinel

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
agents/sentinel_agents/: __init__.py
agents/tests/: test_agents_smoke.py
api/sentinel_api/: __init__.py  main.py
api/tests/: test_api_smoke.py
docs/: PROJECT_IDEA.md  PROJECT_IDEA_EXPLAINED.md
frontend/: package-lock.json  package.json  tsconfig.json
gitops/: README.md
gitops/argocd/apps/: demo-api.yaml  root.yaml
gitops/base/labels/: labels.yaml
gitops/base/namespaces/: namespaces.yaml
gitops/components/argocd/: values.yaml
gitops/components/ingress-nginx/: values.yaml
gitops/components/observability/: README.md
gitops/projects/: README.md
gitops/projects/demo-api/: Chart.yaml  values.yaml
gitops/projects/demo-api/templates/: deployment.yaml
infra/: kind-cluster.yaml
memory/: INIT.md
operator/: go.mod  main.go  main_test.go
rag/sentinel_rag/: __init__.py
rag/tests/: test_rag_smoke.py
scripts/: install-argocd.sh  install-check.sh  install-ingress.sh  kind-up.sh
tasks/: TASKS.md
